# Scout-Upstate

./: .gitignore  .nowignore  now.json  vercel.json
api/: Cargo.toml  README.md  index.js  package-lock.json  package.json
api/migrations/2019-03-21-173135_attractions/: down.sql  up.sql
api/src/: lib.rs  model.rs  schema.rs
api/src/places/: index.rs
blog/: README.md  gatsby-config.js  package-lock.json  package.json
blog/src/: html.js
blog/src/components/: Footer.js  Header.js  layout.js
blog/src/pages/: index.js
blog/src/pages/apple-adventure/: index.md
blog/src/pages/film-festivals-in-the-catskills/: index.md
blog/src/pages/newsletter-april-17-2018/: index.md
blog/src/pages/newsletter-april-25-2018/: index.md
blog/src/pages/newsletter-may-30-2018/: index.md
blog/src/pages/newsletter-may-8-2018/: index.md
blog/src/pages/welcome/: index.md
blog/src/templates/: blog-post.js
www/: README.md  next.config.js  package-lock.json  package.json  routes.js  server.js  vercel.json
www/components/: external-link.js  footer.js  header.js
www/lib/: gtag.js
www/pages/: _app.js  _document.js  index.js
www/pages/about/: index.js
www/pages/api/: places.js
www/pages/calendar/: index.js
www/pages/guide/: index.js
www/pages/guide/attraction/: [slug].js  index.js
www/pages/guide/categories/: index.js
www/pages/guide/map/: index.js
www/public/static/css/: carousel.css
www/public/static/favicon/: manifest.webmanifest
www/static/favicon/: manifest.json
