[package]
name = "scout_api"
version = "0.1.0"
authors = ["Christopher Ogden <ogdenchris@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.0", features = ["postgres"] }
http = "0.1.17"
dotenv = "0.13.0"
reqwest = "0.9.16"
url = "1.7.2"
serde_json = "1.0"
openssl = "0.10.22"
diesel-geography = "0.2.0"