[package]
name = "scout_api"
version = "0.1.0"
authors = [ "Christopher Ogden <ogdenchris@gmail.com>" ]
edition = "2018"

[dependencies]
http = "0.1.17"
dotenv = "0.13.0"
reqwest = "0.9.16"
url = "1.7.2"
serde_json = "1.0"
openssl = "0.10.22"
diesel-geography = "0.2.0"
sentry = "0.12.0"
now_lambda = "*"

  [dependencies.diesel]
  version = "1.4.0"
  features = [ "postgres" ]

[[bin]]
name = "index"
path = "/Users/chris/Desktop/Scout Upstate/api/src/places/index.rs"
